--- a/Analysis_System.ipynb
+++ b/Analysis_System.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4c196662",
+   "id": "fd752156",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,191 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "c510a7cf",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_8740\\2022297357.py:73: DeprecationWarning: ANTIALIAS is deprecated and will be removed in Pillow 10 (2023-07-01). Use LANCZOS or Resampling.LANCZOS instead.\n",
-      "  resized_image = original_image.resize((45, 45), Image.ANTIALIAS)\n",
-      "C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_8740\\2022297357.py:90: DeprecationWarning: ANTIALIAS is deprecated and will be removed in Pillow 10 (2023-07-01). Use LANCZOS or Resampling.LANCZOS instead.\n",
-      "  resized_image = original_image.resize((170, 41), Image.ANTIALIAS)\n"
-     ]
-    }
-   ],
-   "source": [
-    "import tkinter as tk\n",
-    "from tkinter import ttk\n",
-    "from tkinter import PhotoImage\n",
-    "from PIL import Image, ImageTk\n",
-    "\n",
-    "# Create the main window\n",
-    "root = tk.Tk()\n",
-    "root.title(\"ITRI Analysis System\")\n",
-    "root.geometry(\"1920x1080\")   #1440, 1280\n",
-    "root.configure(bg='#7B7B7B') \n",
-    "\n",
-    "# 側邊框架\n",
-    "sidebar_frame = tk.Frame(root, bg='#20212c', width=256, height=1024)\n",
-    "sidebar_frame.pack(side=tk.LEFT, fill=tk.Y)\n",
-    "\n",
-    "# 側邊欄按鈕\n",
-    "sidebar_buttons = [\"Overview\", \"Chart\", \"Transactions\", \"Wallet\", \"News\", \"Mail Box\", \"Setting\", \"Logout\"]\n",
-    "\n",
-    "button_positions = [40, 104, 168, 236, 296, 360, 888, 952]  # Y-coordinates for buttons\n",
-    "\n",
-    "for i, button in enumerate(sidebar_buttons):                                              \n",
-    "    tk.Button(sidebar_frame, text=button, fg='white', bg='#20212c', relief=tk.FLAT, font=('Arial',15,'bold')).place(x=40, y=button_positions[i])\n",
-    "\n",
-    "    \n",
-    "# 上方框架\n",
-    "topbar_frame = tk.Frame(root, bg='#20212c', width=1000, height=50)\n",
-    "topbar_frame.pack(side=tk.TOP, fill=tk.X)\n",
-    "\n",
-    "# 搜尋欄\n",
-    "search_bar = tk.Entry(topbar_frame, bg='#404040', fg='white')\n",
-    "search_bar.pack(side=tk.LEFT, padx=20, pady=10)\n",
-    "\n",
-    "# 主要內容框架\n",
-    "content_frame = tk.Frame(root, bg='#1e1e2e')\n",
-    "content_frame.pack(side=tk.RIGHT, fill=tk.BOTH, expand=True)\n",
-    "\n",
-    "\n",
-    "# 定義功能框架\n",
-    "frame_width = 258\n",
-    "frame_height = 178\n",
-    "frame_color = '#20212c'\n",
-    "frame_positions = [(316, 140), (634, 140), (952, 140), (1270, 140), (1590, 140)]\n",
-    "\n",
-    "for pos in frame_positions:\n",
-    "    frame = tk.Frame(root, bg=frame_color, width=frame_width, height=frame_height, relief=tk.RAISED)\n",
-    "    frame.place(x=pos[0], y=pos[1])\n",
-    "\n",
-    "# 定義功能框架內的小圖片\n",
-    "\n",
-    "png_paths = [r'C:\\Users\\user\\Desktop\\fig\\RMS.png',\n",
-    "              r'C:\\Users\\user\\Desktop\\fig\\Peak.png',\n",
-    "              r'C:\\Users\\user\\Desktop\\fig\\FFT.png',\n",
-    "              r'C:\\Users\\user\\Desktop\\fig\\factor.png',\n",
-    "              r'C:\\Users\\user\\Desktop\\fig\\Analysis.png']\n",
-    "\n",
-    "\n",
-    "\n",
-    "# Positions for each png and label\n",
-    "positions = [(336, 165), (654, 165), (972, 165), (1290, 165), (1610, 165)]\n",
-    "label_texts = [\"RMS\", \"Peak\", \"FFT\", \"Crest Factor\", \"Main Frequency\"]\n",
-    "label_positions = [(396, 165), (714, 165), (1032, 165), (1350, 165), (1670, 165)]\n",
-    "\n",
-    "\n",
-    "# Dictionary to keep a reference to the images to prevent garbage collection\n",
-    "photo_images = {}\n",
-    "\n",
-    "# Load, resize, and place each icon\n",
-    "#for path, pos in zip(png_paths, positions):\n",
-    "for path, pos, label_text, label_pos in zip(png_paths, positions, label_texts, label_positions):\n",
-    "    # Load the image\n",
-    "    original_image = Image.open(path).convert('RGBA')  # Ensure image is in RGBA mode\n",
-    "    # Resize the image\n",
-    "    resized_image = original_image.resize((45, 45), Image.ANTIALIAS)\n",
-    "    # Convert the image for Tkinter\n",
-    "    photo_image = ImageTk.PhotoImage(resized_image)\n",
-    "    # Create a label and place the image in the UI\n",
-    "    image_label = tk.Label(root, image=photo_image, bg='#20212c')  # Set label background to match the window\n",
-    "    image_label.place(x=pos[0], y=pos[1])\n",
-    "    # Store the image reference\n",
-    "    photo_images[path] = photo_image\n",
-    "\n",
-    "    # Create and place the text label\n",
-    "    text_label = tk.Label(root, text=label_text, bg=frame_color, fg='white', font=('Arial',15,'bold'))\n",
-    "    text_label.place(x=label_pos[0], y=label_pos[1]+10)         \n",
-    "        \n",
-    "\n",
-    "# Logo 置放處\n",
-    "\n",
-    "original_image = Image.open(r'C:\\Users\\user\\Desktop\\fig\\Logo.png')  # Replace with your image file path\n",
-    "resized_image = original_image.resize((170, 41), Image.ANTIALIAS)\n",
-    "photo_image = ImageTk.PhotoImage(resized_image)\n",
-    "\n",
-    "image_label = tk.Label(root, image=photo_image)\n",
-    "image_label.place(x=40, y=32) \n",
-    "            \n",
-    "        \n",
-    "# 即時顯示\n",
-    "\n",
-    "Realtime = tk.Frame(root, bg='#20212c', width=1533, height=634, relief=tk.RAISED)\n",
-    "Realtime.place(x=316, y=350)\n",
-    "\n",
-    "\n",
-    "# 暫定內容區域\n",
-    "tk.Label(content_frame, text=\"Main Content Area\", bg='#1e1e2e', fg='white').pack(padx=20, pady=20)\n",
-    "\n",
-    "root.mainloop()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "25dfcf65",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b267c35f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "726e3772",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "56039f36",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "63e8e107",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# TEST"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f4408ecf",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fd752156",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "id": "5052bd78",
    "metadata": {},
    "outputs": [
@@ -204,21 +20,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_8740\\1155390532.py:76: DeprecationWarning: ANTIALIAS is deprecated and will be removed in Pillow 10 (2023-07-01). Use LANCZOS or Resampling.LANCZOS instead.\n",
-      "  resized_image = original_image.resize((45, 45), Image.ANTIALIAS)\n"
-     ]
-    },
-    {
-     "ename": "TclError",
-     "evalue": "image \"pyimage212\" doesn't exist",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTclError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[22], line 80\u001b[0m\n\u001b[0;32m     78\u001b[0m photo_image \u001b[38;5;241m=\u001b[39m ImageTk\u001b[38;5;241m.\u001b[39mPhotoImage(resized_image)\n\u001b[0;32m     79\u001b[0m \u001b[38;5;66;03m# Create a label and place the image in the UI\u001b[39;00m\n\u001b[1;32m---> 80\u001b[0m image_label \u001b[38;5;241m=\u001b[39m tk\u001b[38;5;241m.\u001b[39mLabel(root, image\u001b[38;5;241m=\u001b[39mphoto_image, bg\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m#20212c\u001b[39m\u001b[38;5;124m'\u001b[39m)  \u001b[38;5;66;03m# Set label background to match the window\u001b[39;00m\n\u001b[0;32m     81\u001b[0m image_label\u001b[38;5;241m.\u001b[39mplace(x\u001b[38;5;241m=\u001b[39mpos[\u001b[38;5;241m0\u001b[39m], y\u001b[38;5;241m=\u001b[39mpos[\u001b[38;5;241m1\u001b[39m])\n\u001b[0;32m     82\u001b[0m \u001b[38;5;66;03m# Store the image reference\u001b[39;00m\n",
-      "File \u001b[1;32mE:\\anaconda3\\Lib\\tkinter\\__init__.py:3214\u001b[0m, in \u001b[0;36mLabel.__init__\u001b[1;34m(self, master, cnf, **kw)\u001b[0m\n\u001b[0;32m   3196\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__init__\u001b[39m(\u001b[38;5;28mself\u001b[39m, master\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m, cnf\u001b[38;5;241m=\u001b[39m{}, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkw):\n\u001b[0;32m   3197\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"Construct a label widget with the parent MASTER.\u001b[39;00m\n\u001b[0;32m   3198\u001b[0m \n\u001b[0;32m   3199\u001b[0m \u001b[38;5;124;03m    STANDARD OPTIONS\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m   3212\u001b[0m \n\u001b[0;32m   3213\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[1;32m-> 3214\u001b[0m     Widget\u001b[38;5;241m.\u001b[39m\u001b[38;5;21m__init__\u001b[39m(\u001b[38;5;28mself\u001b[39m, master, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlabel\u001b[39m\u001b[38;5;124m'\u001b[39m, cnf, kw)\n",
-      "File \u001b[1;32mE:\\anaconda3\\Lib\\tkinter\\__init__.py:2628\u001b[0m, in \u001b[0;36mBaseWidget.__init__\u001b[1;34m(self, master, widgetName, cnf, kw, extra)\u001b[0m\n\u001b[0;32m   2626\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m k, v \u001b[38;5;129;01min\u001b[39;00m classes:\n\u001b[0;32m   2627\u001b[0m     \u001b[38;5;28;01mdel\u001b[39;00m cnf[k]\n\u001b[1;32m-> 2628\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtk\u001b[38;5;241m.\u001b[39mcall(\n\u001b[0;32m   2629\u001b[0m     (widgetName, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_w) \u001b[38;5;241m+\u001b[39m extra \u001b[38;5;241m+\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_options(cnf))\n\u001b[0;32m   2630\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m k, v \u001b[38;5;129;01min\u001b[39;00m classes:\n\u001b[0;32m   2631\u001b[0m     k\u001b[38;5;241m.\u001b[39mconfigure(\u001b[38;5;28mself\u001b[39m, v)\n",
-      "\u001b[1;31mTclError\u001b[0m: image \"pyimage212\" doesn't exist"
+      "C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_5784\\372915741.py:76: DeprecationWarning: ANTIALIAS is deprecated and will be removed in Pillow 10 (2023-07-01). Use LANCZOS or Resampling.LANCZOS instead.\n",
+      "  resized_image = original_image.resize((45, 45), Image.ANTIALIAS)\n",
+      "C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_5784\\372915741.py:126: DeprecationWarning: ANTIALIAS is deprecated and will be removed in Pillow 10 (2023-07-01). Use LANCZOS or Resampling.LANCZOS instead.\n",
+      "  resized_image = original_image.resize((170, 41), Image.ANTIALIAS)\n"
      ]
     }
    ],
@@ -293,7 +98,7 @@
     "photo_images = {}\n",
     "\n",
     "# Load, resize, and place each icon\n",
-    "#for path, pos in zip(png_paths, positions):\n",
+    "\n",
     "for path, pos, label_text, label_pos in zip(png_paths, positions, label_texts, label_positions):\n",
     "    # Load the image\n",
     "    original_image = Image.open(path).convert('RGBA')  # Ensure image is in RGBA mode\n",
@@ -316,33 +121,22 @@
     "chart_positions = [(396, 211), (714, 211), (1032, 211), (1350, 211), (1670, 211)]\n",
     "chart_width, chart_height = 165, 100\n",
     "\n",
-    "# 創建折線圖\n",
-    "# for pos in chart_positions:\n",
-    "#     # 創建一個圖形和軸\n",
-    "#     fig = Figure(figsize=(chart_width/100, chart_height/100), dpi=100)\n",
-    "#     ax = fig.add_subplot(111)\n",
-    "\n",
-    "#     # 在這裡創建折線圖的數據 (示例)\n",
-    "#     x = np.linspace(0, 2 * np.pi, 50)\n",
-    "#     y = np.sin(x)\n",
-    "#     ax.plot(x, y)\n",
-    "\n",
-    "#     # 將圖形加入到Tkinter窗口\n",
-    "#     canvas = FigureCanvasTkAgg(fig, master=root)  # 'root' 是 Tkinter 主窗口\n",
-    "#     canvas_widget = canvas.get_tk_widget()\n",
-    "#     canvas_widget.place(x=pos[0], y=pos[1])        \n",
-    "        \n",
-    "    \n",
-    "\n",
     "for pos in chart_positions:\n",
     "    # 創建一個圖形和軸，並設置背景透明\n",
-    "    fig = Figure(figsize=(chart_width/100, chart_height/100), dpi=100)\n",
-    "    fig.patch.set_facecolor('#20212c')  # 設置圖表背景為透明\n",
-    "    fig.patch.set_alpha(0)  # 設置透明度為0\n",
+    "    fig = Figure(figsize=(chart_width/100, chart_height/100), dpi=100, facecolor='#20212c')\n",
     "\n",
     "    ax = fig.add_subplot(111)\n",
-    "    ax.patch.set_facecolor('#20212c')  # 也為軸設置透明背景\n",
+    "    ax.patch.set_facecolor('#20212c')  # 也為軸設置透明背景  \n",
+    "    ax.set_facecolor('#20212c')  # 圖表的背景顏色\n",
+    "    ax.spines['bottom'].set_color('white')  # X軸的顏色\n",
+    "    ax.spines['top'].set_color('white')\n",
+    "    ax.spines['right'].set_color('white')  # Y軸的顏色\n",
+    "    ax.spines['left'].set_color('white')\n",
     "\n",
+    "    ax.tick_params(axis='x', colors='white')  # X軸刻度線和刻度標籤的顏色\n",
+    "    ax.tick_params(axis='y', colors='white')  # Y軸刻度線和刻度標籤的顏色\n",
+    "       \n",
+    "    \n",
     "    # 在這裡創建折線圖的數據 (示例)\n",
     "    x = np.linspace(0, 2 * np.pi, 50)\n",
     "    y = np.sin(x)\n",
@@ -352,7 +146,8 @@
     "    canvas = FigureCanvasTkAgg(fig, master=root)  # 'root' 是 Tkinter 主窗口\n",
     "    canvas_widget = canvas.get_tk_widget()\n",
     "    canvas_widget.place(x=pos[0], y=pos[1])    \n",
-    "    \n",
+    "\n",
+    "\n",
     "    \n",
     "        \n",
     "# Logo 置放處\n",
@@ -369,6 +164,41 @@
     "\n",
     "Realtime = tk.Frame(root, bg='#20212c', width=1533, height=634, relief=tk.RAISED)\n",
     "Realtime.place(x=316, y=350)\n",
+    "   \n",
+    "# 在這裡創建折線圖的數據 (示例)\n",
+    "dpi = 100\n",
+    "width_inch = Realtime['width'] / dpi\n",
+    "height_inch = Realtime['height'] / dpi\n",
+    "\n",
+    "\n",
+    "fig = Figure(figsize=(width_inch, height_inch), dpi=dpi, facecolor='#20212c')\n",
+    "ax = fig.add_subplot(111)\n",
+    "\n",
+    "\n",
+    "ax.set_facecolor('#20212c')  # 圖表的背景顏色\n",
+    "ax.patch.set_facecolor('#20212c')  # 也為軸設置透明背景\n",
+    "\n",
+    "ax.spines['bottom'].set_color('white')  # X軸的顏色\n",
+    "ax.spines['top'].set_color('white')\n",
+    "ax.spines['right'].set_color('white')  # Y軸的顏色\n",
+    "ax.spines['left'].set_color('white')\n",
+    "\n",
+    "ax.tick_params(axis='x', colors='white')  # X軸刻度線和刻度標籤的顏色\n",
+    "ax.tick_params(axis='y', colors='white')  # Y軸刻度線和刻度標籤的顏色\n",
+    "\n",
+    "\n",
+    "\n",
+    "ax.plot(x, y)\n",
+    "\n",
+    "\n",
+    "\n",
+    "# 將圖形加入到Tkinter窗口\n",
+    "canvas = FigureCanvasTkAgg(fig, master=Realtime)  # 'root' 是 Tkinter 主窗口\n",
+    "canvas_widget = canvas.get_tk_widget()\n",
+    "canvas_widget.pack(side=tk.TOP, fill=tk.BOTH, expand=True)\n",
+    "    \n",
+    "\n",
+    "\n",
     "\n",
     "\n",
     "# 暫定內容區域\n",
@@ -376,14 +206,6 @@
     "\n",
     "root.mainloop()\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6521b112",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
